test/cli/test/ack/ensure-namespace-labels/test/user-info.yaml
userInfo:
  username: squad:constellation:session
  groups:
  - squad
  - squad:constellation
